--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,42 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background-color: #f4f4f4;
+  background-color: #646464;
+}
+
+.wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
 .container {
   padding: 30px;
+  border: 3px solid #f1c40f;
+  border-radius: 12px;
+  background-color: #ffffff;
 }
 
 .card {
   background: white;
   padding: 20px;
-  margin-top: 20px;
   border-radius: 10px;
-  width: 300px;
+  width: 230px;
+  text-align: center;
+}
+
+.profile-pic {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  object-fit: cover;
+  display: block;
+  margin-left: 35px;
+  border: 4px solid #f1c40f;
+}
+
+.card p {
+  margin: 4px 0;
 }
 
 .status {
